
[TestAwaitThenable/invalid-0 - 1]
Diagnostic 1: await (1:1 - 1:5)
Message: Unexpected `await` of a non-Promise (non-"Thenable") value.
   1 | await 0;
     | ~~~~~
  Suggestion 1: [removeAwait] Remove unnecessary `await`.
---

[TestAwaitThenable/invalid-1 - 1]
Diagnostic 1: await (1:1 - 1:5)
Message: Unexpected `await` of a non-Promise (non-"Thenable") value.
   1 | await 'value';
     | ~~~~~
  Suggestion 1: [removeAwait] Remove unnecessary `await`.
---

[TestAwaitThenable/invalid-10 - 1]
Diagnostic 1: forAwaitOfNonAsyncIterable (7:1 - 7:48)
Message: Unexpected `for await...of` of a value that is not async iterable.
   6 | }
   7 | for await (const value of yieldNumberPromises()) {
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   8 |   console.log(value);
  Suggestion 1: [convertToOrdinaryFor] Convert to an ordinary `for...of` loop.
---

[TestAwaitThenable/invalid-11 - 1]
Diagnostic 1: awaitUsingOfNonAsyncDisposable (4:19 - 4:28)
Message: Unexpected `await using` of a value that is not async disposable.
   3 | async function foo() {
   4 |   await using d = disposable;
     |                   ~~~~~~~~~~
   5 | }
  Suggestion 1: [removeAwait] Remove unnecessary `await`.
---

[TestAwaitThenable/invalid-12 - 1]
Diagnostic 1: awaitUsingOfNonAsyncDisposable (3:19 - 5:3)
Message: Unexpected `await using` of a value that is not async disposable.
   2 | async function foo() {
   3 |   await using _ = {
     |                   ~
   4 |     async [Symbol.dispose]() {},
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   5 |   };
     | ~~~
   6 | }
  Suggestion 1: [removeAwait] Remove unnecessary `await`.
---

[TestAwaitThenable/invalid-13 - 1]
Diagnostic 1: awaitUsingOfNonAsyncDisposable (5:19 - 5:28)
Message: Unexpected `await using` of a value that is not async disposable.
   4 | async function foo() {
   5 |   await using a = disposable,
     |                   ~~~~~~~~~~
   6 |     b = asyncDisposable,

Diagnostic 2: awaitUsingOfNonAsyncDisposable (7:9 - 7:18)
Message: Unexpected `await using` of a value that is not async disposable.
   6 |     b = asyncDisposable,
   7 |     c = disposable,
     |         ~~~~~~~~~~
   8 |     d = asyncDisposable,

Diagnostic 3: awaitUsingOfNonAsyncDisposable (9:9 - 9:18)
Message: Unexpected `await using` of a value that is not async disposable.
   8 |     d = asyncDisposable,
   9 |     e = disposable;
     |         ~~~~~~~~~~
  10 | }
---

[TestAwaitThenable/invalid-14 - 1]
Diagnostic 1: awaitUsingOfNonAsyncDisposable (6:9 - 6:18)
Message: Unexpected `await using` of a value that is not async disposable.
   5 |   await using a = anee,
   6 |     b = disposable;
     |         ~~~~~~~~~~
   7 | }
---

[TestAwaitThenable/invalid-15 - 1]
Diagnostic 1: await (3:10 - 3:14)
Message: Unexpected `await` of a non-Promise (non-"Thenable") value.
   2 | async function wrapper<T extends number>(value: T) {
   3 |   return await value;
     |          ~~~~~
   4 | }
  Suggestion 1: [removeAwait] Remove unnecessary `await`.
---

[TestAwaitThenable/invalid-16 - 1]
Diagnostic 1: await (4:12 - 4:16)
Message: Unexpected `await` of a non-Promise (non-"Thenable") value.
   3 |   async wrapper<T extends string>(value: T) {
   4 |     return await value;
     |            ~~~~~
   5 |   }
  Suggestion 1: [removeAwait] Remove unnecessary `await`.
---

[TestAwaitThenable/invalid-17 - 1]
Diagnostic 1: await (4:12 - 4:16)
Message: Unexpected `await` of a non-Promise (non-"Thenable") value.
   3 |   async wrapper<T extends R>(value: T) {
   4 |     return await value;
     |            ~~~~~
   5 |   }
  Suggestion 1: [removeAwait] Remove unnecessary `await`.
---

[TestAwaitThenable/invalid-2 - 1]
Diagnostic 1: await (1:13 - 1:17)
Message: Unexpected `await` of a non-Promise (non-"Thenable") value.
   1 | async () => await (Math.random() > 0.5 ? '' : 0);
     |             ~~~~~
  Suggestion 1: [removeAwait] Remove unnecessary `await`.
---

[TestAwaitThenable/invalid-3 - 1]
Diagnostic 1: await (1:13 - 1:17)
Message: Unexpected `await` of a non-Promise (non-"Thenable") value.
   1 | async () => await(Math.random() > 0.5 ? '' : 0);
     |             ~~~~~
  Suggestion 1: [removeAwait] Remove unnecessary `await`.
---

[TestAwaitThenable/invalid-4 - 1]
Diagnostic 1: await (3:1 - 3:5)
Message: Unexpected `await` of a non-Promise (non-"Thenable") value.
   2 | class NonPromise extends Array {}
   3 | await new NonPromise();
     | ~~~~~
   4 |       
  Suggestion 1: [removeAwait] Remove unnecessary `await`.
---

[TestAwaitThenable/invalid-5 - 1]
Diagnostic 1: await (8:3 - 8:7)
Message: Unexpected `await` of a non-Promise (non-"Thenable") value.
   7 | 
   8 |   await thenable;
     |   ~~~~~
   9 | }
  Suggestion 1: [removeAwait] Remove unnecessary `await`.
---

[TestAwaitThenable/invalid-6 - 1]
Diagnostic 1: await (3:1 - 3:5)
Message: Unexpected `await` of a non-Promise (non-"Thenable") value.
   2 | declare const callback: (() => void) | undefined;
   3 | await callback?.();
     | ~~~~~
   4 |       
  Suggestion 1: [removeAwait] Remove unnecessary `await`.
---

[TestAwaitThenable/invalid-7 - 1]
Diagnostic 1: await (3:1 - 3:5)
Message: Unexpected `await` of a non-Promise (non-"Thenable") value.
   2 | declare const obj: { a?: { b?: () => void } };
   3 | await obj.a?.b?.();
     | ~~~~~
   4 |       
  Suggestion 1: [removeAwait] Remove unnecessary `await`.
---

[TestAwaitThenable/invalid-8 - 1]
Diagnostic 1: await (3:1 - 3:5)
Message: Unexpected `await` of a non-Promise (non-"Thenable") value.
   2 | declare const obj: { a: { b: { c?: () => void } } } | undefined;
   3 | await obj?.a.b.c?.();
     | ~~~~~
   4 |       
  Suggestion 1: [removeAwait] Remove unnecessary `await`.
---

[TestAwaitThenable/invalid-9 - 1]
Diagnostic 1: forAwaitOfNonAsyncIterable (7:1 - 7:41)
Message: Unexpected `for await...of` of a value that is not async iterable.
   6 | }
   7 | for await (const value of yieldNumbers()) {
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   8 |   console.log(value);
  Suggestion 1: [convertToOrdinaryFor] Convert to an ordinary `for...of` loop.
---
